<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Absensi Paramadina</string>

    <!-- Menu Related -->

    <string name="action_add">Tambah</string>
    <string name="action_add_manually">Tambah Secara Manual</string>
    <string name="action_refresh">Muat Ulang</string>
    <string name="action_send">Kirim</string>
    <string name="action_settings">Pengaturan</string>

    <!-- Messages -->

    <string name="add_manually_message">Masukkan Nomor Induk Mahasiswa</string>
    <string name="data_get_error">Gagal mengambil data. Cobalah beberapa saat lagi.</string>
    <string name="data_get_message">Sedang mengambil data..</string>
    <string name="data_invalid">Data dari server tidak valid. Kontak pengembang.</string>
    <string name="data_parse_error">Gagal mengolah data dari server.</string>
    <string name="loading_message">Harap tunggu..</string>
    <string name="unknown_error">Terjadi kesalahan.</string>

    <!-- Internationalization -->

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="lbl_username">Email</string>
    <string name="lbl_username_hint">Masukkan Email Anda</string>
    <string name="lbl_password">Password</string>
    <string name="btn_login_text">Login</string>

    <string-array name="drawer_menu2">
        <item>Halaman Depan</item>
        <item>Tentang Aplikasi</item>
    </string-array>

    <!-- Settings Related -->

    <string name="settings_connection_title">Pengaturan Koneksi</string>
    <string name="settings_api_address_title">Alamat API Server Paramadina</string>
    <string name="settings_api_address_summary">Pengaturan alamat URL API Server Paramadina</string>
    <string name="settings_send_sms">Kirim SMS?</string>
    <string name="settings_send_sms_summary">Kirim SMS notifikasi ke mahasiswa</string>
    <string name="title_activity_add_new_lecturer_report">Buat Laporan Mengajar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_teaching_report_list">TeachingReportListActivity</string>
    <string name="title_activity_teaching_report_detail">TeachingReportDetailActivity</string>
    <string name="title_activity_class_meeting_list">ClassMeetingListActivity</string>
    <string name="title_activity_class_meeting_detail">ClassMeetingDetailActivity</string>
    <string name="title_activity_pending_class_meeting">PendingClassMeetingActivity</string>
    <string name="title_activity_attendance_list">AttendanceListActivity</string>

</resources>
